# cv-r

./: Cargo.toml  README.md
src/: appState.rs  app_state.rs  camera.rs  detections.rs  main.rs  nt.rs  time.rs  utils.rs
templates/: cameras.html  configurator.html  index.html
