[package]
name = "cv-r"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
image = "0.25.9"
ndarray = "0.17.1"
ort = { version = "2.0.0-rc.10", features = [ "tensorrt" ] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
v4l = "0.14.0"
